# Hair-Renderer

./: .gitignore  CMakeLists.txt  README.md  generator.sh  imgui.ini  setup.sh
resources/models/: 00020000_strands_points.ply  00100000_strands_points.ply  00140000_strands_points.ply  final_hair.ply  hair_140000.ply  hair_blender.ply  womanMit.ply
resources/shaders/: cook-torrance.glsl  depth.glsl  fxaa.glsl  m.glsl  noise-gen.glsl  phong.glsl  screen.glsl  shadow.glsl  skybox.glsl  smaa-blending-weight.glsl  smaa-edge-detection.glsl  smaa-neighbour-blending.glsl  smaa.glsl  strand-depth.glsl  strand-kajiya.glsl  strand-marschner-epic.glsl  strand-marschner-pre-test.glsl  strand-marschner-pre.glsl  strand-marschner.glsl  test.glsl  unlit.glsl
resources/shaders/smaa/: blending-weight.glsl  edge-detection.glsl  neighbour-blending.glsl  separate.glsl
src/: hair_loaders.cpp  hair_loaders.h  hair_renderer.cpp  hair_renderer.h  main.cpp  settings.h  smaaAux.h
src/engine/: camera.h  controller.cpp  controller.h  core.cpp  core.h  framebuffer.cpp  framebuffer.h  gui_layer.cpp  gui_layer.h  light.cpp  light.h  loaders.cpp  loaders.h  material.cpp  material.h  mesh.cpp  mesh.h  object3D.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniforms.cpp  uniforms.h  utils.cpp  utils.h
src/marschner/: generator.hpp  gmath.hpp  main.cpp
